--- a/index.html
+++ b/index.html
@@ -3,78 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />  
+    <title>Веб Студия</title>
   </head>
   <body>
-    <!--Шапка-->
+    
+    <!--Шапка сайта-->
 
     <header>
-      <a href=" /">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
+    <a href=" /" class="logo"><span class="logo-part">Web</span>Studio</a>
+    <nav>
+      <ul class="site-nav">
+        <li><a href="./index.html" class="link link-page current">Студия</a></li>
+        <li><a href="./portfolio.html" class="link link-page">Портфолио</a></li>
+        <li><a href="/" class="link link-page">Контакты</a></li>
+      </ul>
+    </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-nav">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
+
       <!--Герой-->
 
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-
-        <button type="button">Заказать услугу</button>
-      </section>
+      <div>
+        <section class="hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="button" type="button">Заказать услугу</button>
+        </section>
+      </div>
 
       <!--Достоинства-->
 
-      <section>
+      <section class="section">
         <h2 class="visually-hidden">Достоинства компании</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <h3 class="section-title-profit">Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по
+              формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
+            <h3 class="section-title-profit">Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.</p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
+            <h3 class="section-title-profit">Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной
+              степени обуславливает.</p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <h3 class="section-title-profit">Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.</p>
           </li>
         </ul>
       </section>
 
       <!--Наши услуги-->
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title-services">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/images1/img.jpg"
@@ -101,17 +99,17 @@
 
       <!--Сотрудники-->
 
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section  class="section">
+        <h2 class="section-title-services">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/images2/img.jpg"
               alt="Парень в коричневой рубашке"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-title">Product Designer</p>
           </li>
           <li>
             <img
@@ -119,8 +117,8 @@
               alt="Девушка в черном пиджаке"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-title">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -128,8 +126,8 @@
               alt="Парень в белой рубашке"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-title">Marketing</p>
           </li>
           <li>
             <img
@@ -137,8 +135,8 @@
               alt="Парень в черной футболке"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-title">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -146,14 +144,21 @@
 
     <!--Футер-->
 
-    <footer>
-      <a href=" /">WebStudio</a>
+    <footer class="footer">
+      <a href=" /" class="logo-footer">
+        <span class="logo-part">Web</span> Studio</a>
 
-      <address>
-        <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26 </a></li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380961111111">+38 099 111 11 11</a></li>
+      <address class="address">
+        <ul class="footer-contact">
+          <li>
+            <a href="https://goo.gl/maps/qucAcmc7RsmT4kep8" class="street">г. Киев, пр-т Леси Украинки, 26 </a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
